# simam_rest

./: README.md  client.py  cmd.py  server.py  setup.cfg  tui.py
src/simam/config/: config.py  default_config.ini  permissions.py
src/simam/controller/: message.py  project.py  user.py
src/simam/database/: engine.py  install.py  session.py
src/simam/guards/: guards.py
src/simam/model/: model.py
src/simam/util/: hashing.py  string.py
test/: conftest.py  test_auth.py  test_message.py  test_project_controller.py
