[bumpversion]
current_version = 1.0

[metadata]
name = simam_rest
version = 0.0.1
description = a test project
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = template
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de
url = https://github.com/cloasdata/simam_rest

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
install_requires =
	importlib
	python_version >= "3.10"
	SQLAlchemy >= "1.4.41"
	starlite >= 1.17.1
	starlite-jwt >=1.2.0
	uvicorn >= 0.18.3

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 7.1.3